--- a/Dia 1.0/main.css
+++ b/Dia 1.0/main.css
@@ -11,10 +11,11 @@ body{
     justify-content: center;
     position: relative;
     align-items: center;
+    width: 100vw;
+    height: 100vh;
 }
 
 .container{
-    margin-top: 4.5%;
     background: #993399;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     height: 573px;
