--- a/Dia 4.0 e 5.0/tela/src/components/Form.css
+++ b/Dia 4.0 e 5.0/tela/src/components/Form.css
@@ -1,9 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Magra&display=swap');
 
 .corpo {
+    display: flex;
     flex-direction: column;
-    padding: 0px 70px;
+    padding: 0px 5%;
     height: 100%;
+    width: 90%;
 }
 
 .formulario {
