--- a/Dia 6.0 e 7.0/tela/src/App.css
+++ b/Dia 6.0 e 7.0/tela/src/App.css
@@ -1,10 +1,7 @@
 .App {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
     display: flex;
     flex-direction: column;
-    /* gap: 80px; */
+    /* align-items: center; */
     width: 100vw;
     height: 100vh;
   }
