--- a/Dia 6.0 e 7.0/tela/src/components/Form.css
+++ b/Dia 6.0 e 7.0/tela/src/components/Form.css
@@ -5,8 +5,8 @@
     flex-direction: column;
     align-items: center;
     text-align: center;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
 }
 
 h3 {
@@ -16,25 +16,23 @@ h3 {
 .formulario {
     display: flex;
     flex-direction: column;
-    width: 100%;
-    height: 50%;
     align-items: center;
+    width: 100%;
     gap: 10px;
 }
 
 input {
     border: 1px solid #C6C6C6;
     border-radius: 4px;
-    width: 80%;
-    height: 50px;
+    width: 88%;
     font-family: 'Magra';
     font-size: 20px;
-    padding-left: 3%;
+    padding: 1%;
 }
 
 button {
     font-family: 'Magra';
-    width: 1280px;
+    width: 90%;
     height: 50px;
     background: #00CED1;
     border: none;
@@ -51,48 +49,41 @@ button:hover {
 
 .itens {
     display: flex;
-    align-items: left;
     flex-direction: row;
-    flex-wrap: wrap;
-    width: 85%;
+    align-items: center;
+    width: 90%;
     height: 100%;
-    gap: 8.7%;
-    /* margin: 0; */
+    gap: 50px;
+    padding: 0;
     overflow-x: scroll;
 }
 
 .item {
     display: flex;
-    text-align: center;
-    align-items: center;
     flex-direction: column;
-    justify-content: center;
-    width: 230px;
-    height: 250px;
+    min-width: 180px;
+    height: 200px;
+    gap: 30%;
+    font-size: 24px;
     background-color: #00CED1;
-    font-size: 36px;
     border-radius: 10px;
-    gap: 20%;
+    padding: 10px 10px;
 }
 
 .card1 {
     color: white;
     display: flex;
     flex-direction: column;
-    width: 90%;
+    height: 100%;
 }
 
 .card2 {
     display: flex;
     flex-direction: column;
-}
-
-p {
-    font-size: 24px;
-    margin: 0;
+    height: 100%;
 }
 
 img {
-    width: 15%;
+    width: 20%;
     align-self: self-end;
 }
